cambio de color de fondo

--- a/Productos.css
+++ b/Productos.css
@@ -5,8 +5,10 @@
                             'imagen descripcion'
                             'puntaje puntaje'
                             'ingreso-puntaje ingreso-puntaje';
+}
 
-    color: aliceblue;
+body {
+    background-color: aliceblue;
 }
 
 .box {
